fix z-index and display none of the sec01Content when menu is active

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -913,12 +913,12 @@ header {
       position: relative;
       vertical-align: middle;
       text-align: center;
-      padding-bottom: 58px;
-      z-index: 2; }
+      padding-bottom: 58px; }
       .sec01 .sectionInner .sec01Content h1 {
         display: inline-block;
         position: relative;
-        margin: 0 0 90px; }
+        margin: 0 0 90px;
+        z-index: 2; }
         .sec01 .sectionInner .sec01Content h1 img {
           max-width: 245px;
           vertical-align: middle;
@@ -934,30 +934,33 @@ header {
         @media (max-width: 375px) {
           .sec01 .sectionInner .sec01Content h1 img {
             width: 90%; } }
-      .sec01 .sectionInner .sec01Content h2 {
-        margin-bottom: 20px;
-        font-family: "VanitasStencilBold", Helvetica, Arial, sans-serif;
-        font-size: 44px;
-        line-height: 1.3;
-        text-transform: uppercase; }
-        @media (max-width: 767px) {
-          .sec01 .sectionInner .sec01Content h2 {
-            width: 90%;
-            margin: 0 auto 30px; } }
-        @media (max-width: 375px) {
-          .sec01 .sectionInner .sec01Content h2 {
-            width: 85%; } }
-      .sec01 .sectionInner .sec01Content p {
-        margin-bottom: 50px;
-        font-size: 33px;
-        font-style: italic;
-        font-weight: 300;
-        line-height: 1.3; }
-        @media (max-width: 767px) {
-          .sec01 .sectionInner .sec01Content p {
-            font-size: 28px;
-            width: 84%;
-            margin: 0 auto 60px; } }
+      .sec01 .sectionInner .sec01Content .description {
+        position: relative;
+        z-index: 1; }
+        .sec01 .sectionInner .sec01Content .description h2 {
+          margin-bottom: 20px;
+          font-family: "VanitasStencilBold", Helvetica, Arial, sans-serif;
+          font-size: 44px;
+          line-height: 1.3;
+          text-transform: uppercase; }
+          @media (max-width: 767px) {
+            .sec01 .sectionInner .sec01Content .description h2 {
+              width: 90%;
+              margin: 0 auto 30px; } }
+          @media (max-width: 375px) {
+            .sec01 .sectionInner .sec01Content .description h2 {
+              width: 85%; } }
+        .sec01 .sectionInner .sec01Content .description p {
+          margin-bottom: 50px;
+          font-size: 33px;
+          font-style: italic;
+          font-weight: 300;
+          line-height: 1.3; }
+          @media (max-width: 767px) {
+            .sec01 .sectionInner .sec01Content .description p {
+              font-size: 28px;
+              width: 84%;
+              margin: 0 auto 60px; } }
     .sec01 .sectionInner .scroll {
       position: absolute;
       text-align: center;
@@ -965,7 +968,7 @@ header {
       left: 0;
       bottom: 0;
       padding-bottom: 41px;
-      z-index: 2; }
+      z-index: 1; }
       .sec01 .sectionInner .scroll .mouse {
         height: 30px;
         width: 22px;
@@ -1426,7 +1429,7 @@ footer .footerInner {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1; }
+  z-index: 2; }
 
 @keyframes mouse-wheel {
   0% {
